--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
    img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *;
    style-src  'self' 'unsafe-inline' *; media-src data: http://res.cloudinary.com"
     />
-    <link rel="icon" href="%PUBLIC_URL%/gootalk_icon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Buzzspace_icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="hsl(220.3, 62.5%, 22%)" />
     <meta name="description" content="My social network project." />
@@ -38,7 +38,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./index.css" />
-    <title>Gootalk</title>
+    <title>Buzzspace</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
